# libcudf-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
docs/: cuda_streams.md  cuda_streams_benchmark_results_tpch_1.md  cuda_streams_implementation.md  fix_implicit_gpu_copies.md
libcudf-benchmarks/: BENCHMARKS.md  Cargo.toml
libcudf-benchmarks/benches/: arrow_conversion.rs  common.rs  datafusion_benchmark.rs  filter_benchmark.rs  groupby_benchmark.rs  parquet_benchmark.rs  sort_benchmark.rs  tpch_benchmark.rs
libcudf-datafusion/: .gitignore  Cargo.toml
libcudf-datafusion-benchmarks/: README.md
libcudf-datafusion-benchmarks/src/: harness.rs  run.rs
libcudf-datafusion/benches/: aggregate.rs  tpch_pipeline.rs
libcudf-datafusion/src/: cudf_ext.rs  cudf_load.rs  decimal.rs  errors.rs  filter.rs  lib.rs  stream_source.rs  task_context.rs
libcudf-datafusion/src/aggregate/: mod.rs  stream.rs
libcudf-datafusion/src/aggregate/op/: mod.rs  sum.rs  udf.rs
libcudf-datafusion/src/expr/: ast.rs  binary.rs  binary_op.rs  column.rs  literal.rs  mod.rs
libcudf-datafusion/src/optimizer/: config.rs  cudf_boundaries.rs  host_to_cudf.rs  mod.rs
libcudf-datafusion/src/physical/: coalesce_batches.rs  cudf_load.rs  cudf_unload.rs  filter.rs  hash_join.rs  mod.rs  projection.rs  sort.rs
libcudf-datafusion/src/physical/cudf_parquet_scan/: mod.rs  reader.rs  scan_source.rs
libcudf-datafusion/src/planner/: config.rs  host_to_cudf.rs  mod.rs  parquet_scan.rs  rescale_leafs.rs  session_state_builder_ext.rs
libcudf-datafusion/src/test_utils/: insta.rs  mod.rs  session_context.rs  tpch.rs
libcudf-datafusion/tests/: clickbench_correctness.rs  clickbench_plans.rs  tpch_correctness.rs  tpch_plans.rs
libcudf-sys/: .clangd  .gitignore  Cargo.toml  build.rs  generate_compile_commands.sh
libcudf-sys/src/: aggregation.cpp  aggregation.h  ast.cpp  ast.h  binaryop.cpp  binaryop.h  bridge.cpp  bridge.h  column.cpp  column.h  concatenate.cpp  concatenate.h  copying.cpp  copying.h  data_type.cpp  data_type.h  device_memory.h  filling.cpp  filling.h  groupby.cpp  groupby.h  interop.h  io.cpp  io.h  join.cpp  join.h  lib.rs  memory_resource.h  operations.cpp  operations.h  pinned_host.cpp  pinned_host.h  pinned_memory.h  scalar.cpp  scalar.h  sorting.cpp  sorting.h  stream.cpp  stream.h  stream_compaction.cpp  (+5 more)
libcudf-sys/src/snapshots/: binaryop_test__all_binary_operators-2.snap  binaryop_test__all_binary_operators-3.snap  filter_test__tests__apply_boolean_mask.snap  libcudf_sys__tests__apply_boolean_mask.snap  libcudf_sys__tests__binary_op_col_col_add.snap  libcudf_sys__tests__binary_op_col_col_multiply.snap  libcudf_sys__tests__sort_by_key.snap  libcudf_sys__tests__sort_table_descending.snap  libcudf_sys__tests__sorted_order.snap  libcudf_sys__tests__stable_sort_by_key.snap  libcudf_sys__tests__stable_sort_table.snap  sorting_test__sort_by_key.snap  sorting_test__sort_table_descending.snap  sorting_test__stable_sort_by_key.snap  sorting_test__stable_sort_table.snap
libcudf-sys/tests/: binaryop_test.rs  common.rs  filter_test.rs  groupby_test.rs  pretty.rs  slice_test.rs  sorting_test.rs  streaming_avg_playground.rs
libcudf-sys/tests/snapshots/: binaryop_test__all_binary_operators-4.snap  binaryop_test__all_binary_operators.snap  binaryop_test__binary_op_col_col_add.snap  binaryop_test__binary_op_col_col_multiply.snap  sorting_test__sorted_order.snap
src/: arrow_device_array.rs  ast.rs  binary_op.rs  column.rs  column_view.rs  cudf_array.rs  cudf_reference.rs  data_type.rs  errors.rs  group_by.rs  join.rs  lib.rs  operations.rs  pinned.rs  pinned_pool.rs  scalar.rs  sort.rs  stream.rs  table.rs  table_view.rs  union_types.rs
testdata/weather/: result-000000.parquet  result-000001.parquet  result-000002.parquet
tests/: arrow_test.rs  clone_test.rs  column_access_test.rs  column_test.rs  column_view_test.rs  filter_test.rs  gpu_memory_test.rs  parquet_test.rs  scalar_from_arrow_test.rs
