[workspace]
members = ["libcudf-sys", "libcudf-benchmarks"]
resolver = "2"

[package]
name = "libcudf-rs"
version = "0.1.0"
edition = "2021"
authors = [
    "notfilippo",
    "gabotechs",
]

[dependencies]
libcudf-sys = { path = "libcudf-sys" }
cxx = "1.0"
arrow = { version = "57", features = ["ffi"] }
arrow-schema = "57"
thiserror = "2.0"
