[workspace]
members = ["libcudf-sys", "libcudf-benchmarks"]
resolver = "2"

[workspace.dependencies]
arrow = { version = "57", features = ["ffi", "prettyprint"] }
arrow-schema = "57"
cxx = "1.0"
thiserror = "2.0"

[package]
name = "libcudf-rs"
version = "0.1.0"
edition = "2021"
authors = [
    "notfilippo",
    "gabotechs",
]

[dependencies]
libcudf-sys = { path = "libcudf-sys" }
cxx = { workspace = true }
arrow = { workspace = true }
arrow-schema = { workspace = true }
thiserror = { workspace = true }
