[package]
name = "libcudf-datafusion"
version = "0.1.0"
edition = "2021"
authors = [
    "notfilippo",
    "gabotechs",
]

[dependencies]
libcudf-rs = { path = ".." }
arrow = { workspace = true }
arrow-schema = { workspace = true }
datafusion = "51"
datafusion-expr = "51"
datafusion-physical-plan = "51"
futures = "0.3"
async-trait = "0.1"
tokio = { version = "1.41", features = ["rt", "macros"] }
futures-util = "0.3"
delegate = "0.13"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
insta = { version = "1.44.3", features = ["filters"] }
