[package]
name = "libcudf-sys"
version = "0.1.0"
edition = "2021"
description = "Low-level FFI bindings to libcudf using cxx"
authors = [
    "notfilippo",
    "gabotechs",
]
links = "cudf"

[dependencies]
cxx = { workspace = true }

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"
num_cpus = "1.0"